Fixed header on mobile devices

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
  */
 
 header {
-  min-height: 1em;
+  min-height: 3em;
   font-size: 1em;
   padding: 1em;
   width: 100%;
